fixed date wrapping in datatables

--- a/web/css/style.less
+++ b/web/css/style.less
@@ -252,6 +252,12 @@ select {
     display: none;
 }
 
+.dataTable {
+    tbody {
+        white-space: nowrap;
+    }
+}
+
 .btn {
     vertical-align: middle;
     padding: 15px 15px 15px 15px;
